Some bugs corrected x2